Add details for publications and events

--- a/publication/index.html
+++ b/publication/index.html
@@ -849,7 +849,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.1145/3477495.3531716" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/https://doi.org/10.1145/3488560.3498375" target="_blank" rel="noopener">
   DOI
 </a>
 
