--- a/index.html
+++ b/index.html
@@ -873,9 +873,9 @@
     <h1>Biography</h1>
 
     <div class="article-style">
-      <p>I am a PhD student at the Information Retrieval Lab (IRLab) at University of Amsterdam (UvA).
+      <p>I am a PhD student at the Information Retrieval Lab (IRLab) at University of Amsterdam (UvA), supervised by <a href="https://staff.fnwi.uva.nl/m.derijke/"> Prof. dr. Maarten de Rijke </a>, <a href="https://staff.fnwi.uva.nl/h.c.vanhoof/homepage/"> Dr. Herke van Hoof</a>, and <a href="https://harrieo.github.io/"> Dr. Harrie Oosterhuis</a>.
 My research interests include reinforcement learning based recommender system, debiasing recommendations, and privacy preserving recommendations.
-Before joining UvA, I received my BE and ME degree in computer science from Renmin University of China in 2016 and 2019, respectively.</p>
+Before joining UvA, I received my BE and ME degree in computer science from Renmin University of China under the supervision of <a href="http://playbigdata.ruc.edu.cn/batmanfly/"> Prof. dr. Xin Zhao </a> and <a href="https://gsai.ruc.edu.cn/addons/teacher/index/info.html?user_id=0&ruccode=20130047&ln=en"> Prof. dr. Ji-Rong Wen</a> in 2016 and 2019, respectively.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/jhuang_cv.pdf" target="_blank">resumé</a>.</p>
 
