--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
       <p>I am a last-year Ph.D. candidate at the Information Retrieval Lab (IRLab) at University of Amsterdam (UvA), supervised by <a href="https://staff.fnwi.uva.nl/m.derijke/"> Prof. dr. Maarten de Rijke </a>, <a href="https://staff.fnwi.uva.nl/h.c.vanhoof/homepage/"> Dr. Herke van Hoof</a>, and <a href="https://harrieo.github.io/"> Dr. Harrie Oosterhuis</a>.
 Prior to that, I received my BE and ME degree in computer science from Renmin University of China under the supervision of <a href="http://playbigdata.ruc.edu.cn/batmanfly/"> Prof. dr. Xin Zhao </a> and <a href="https://gsai.ruc.edu.cn/addons/teacher/index/info.html?user_id=0&ruccode=20130047&ln=en"> Prof. dr. Ji-Rong Wen</a> in 2016 and 2019, respectively.</p>
 <p>My research interest focuses on trustworthy intelligent information systems, with a focus on unbiasedness, fairness, robustness, and explainability.</p>
-<p>I successfully defend my Ph.D. thesis titled <a href="https://pure.uva.nl/ws/files/152764736/Thesis.pdf"> <em>Learning Recommender Systems from Biased User Interactions</em> </a> on 7th Feb 2024.
+<p>I successfully defended my Ph.D. thesis titled <a href="https://pure.uva.nl/ws/files/152764736/Thesis.pdf"> <em>Learning Recommender Systems from Biased User Interactions</em> </a> on 7th Feb 2024.
 I am looking for positions to continue my research.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/jhuang_cv.pdf" target="_blank">resumé</a>.</p>
