--- a/publication/kb4rec2019/index.html
+++ b/publication/kb4rec2019/index.html
@@ -1064,7 +1064,7 @@ Supplementary notes can be added here, including [code, math, and images](https:
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://example.com/">Jin Huang</a></h5>
-      <h6 class="card-subtitle">PhD student</h6>
+      <h6 class="card-subtitle">Postdoc</h6>
       <p class="card-text">My research interest focuses on trustworthy intelligent information systems, with a focus on unbiasedness, fairness, robustness, and explainability.</p>
       <ul class="network-icon" aria-hidden="true">
   
@@ -1230,7 +1230,7 @@ Supplementary notes can be added here, including [code, math, and images](https:
 
   
   <p class="powered-by copyright-license-text">
-    © 2024 Me. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
+    © 2025 Me. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
   </p>
   
 
