--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@
 Prior to that, I received my BE and ME degree in computer science from Renmin University of China under the supervision of <a href="http://playbigdata.ruc.edu.cn/batmanfly/"> Prof. dr. Xin Zhao </a> and <a href="https://gsai.ruc.edu.cn/addons/teacher/index/info.html?user_id=0&ruccode=20130047&ln=en"> Prof. dr. Ji-Rong Wen</a> in 2016 and 2019, respectively.</p>
 <p>My research interest focuses on trustworthy advice-giving systems for real-world applications, especially in high-risk domains, e.g., healthcare, news recommendation, and public services.</p>
 <p>I successfully defended my Ph.D. thesis titled <a href="https://pure.uva.nl/ws/files/152764736/Thesis.pdf"> <em>Learning Recommender Systems from Biased User Interactions</em> </a> on 7th Feb 2024.
-I am looking for positions to .</p>
+I am looking for positions to continue my career.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/jhuang_cv.pdf" target="_blank">resumé</a>.</p>
 
