--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@ I am looking for positions to continue my career.</p>
       Maarten de Rijke</span>
   </span>
   (2024).
-  <a href="/publication/zhao2025revisiting/">Improving sequential recommendation with knowledge-enhanced memory networks</a>.
+  <a href="/publication/zhao2025revisiting/">Revisiting Language Models in Neural News Recommender Systems</a>.
   In <em>ECIR</em>.
   
   <p>
