--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -730,7 +730,7 @@
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
-      <a href="/publication/zhao2025revisiting/" >Improving sequential recommendation with knowledge-enhanced memory networks</a>
+      <a href="/publication/zhao2025revisiting/" >Revisiting Language Models in Neural News Recommender Systems</a>
     </div>
 
     
