--- a/publication/index.html
+++ b/publication/index.html
@@ -834,7 +834,7 @@
       Maarten de Rijke</span>
   </span>
   (2024).
-  <a href="/publication/zhao2025revisiting/">Improving sequential recommendation with knowledge-enhanced memory networks</a>.
+  <a href="/publication/zhao2025revisiting/">Revisiting Language Models in Neural News Recommender Systems</a>.
   In <em>ECIR</em>.
   
   <p>
