--- a/publication/kb4rec2019/index.html
+++ b/publication/kb4rec2019/index.html
@@ -1065,7 +1065,7 @@ Supplementary notes can be added here, including [code, math, and images](https:
     <div class="media-body">
       <h5 class="card-title"><a href="https://example.com/">Jin Huang</a></h5>
       <h6 class="card-subtitle">Postdoc</h6>
-      <p class="card-text">My research interest focuses on trustworthy intelligent information systems, with a focus on unbiasedness, fairness, robustness, and explainability.</p>
+      <p class="card-text">My research interest focuses on trustworthy advice-giving systems for real-world applications, especially in high-risk domains, e.g., healthcare, news recommendation, and public services.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
